--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows a simple, scalar implementation of the [finite difference](https://en.wikipedia.org/wiki/Finite_difference_method) for solving the [Nonlinear Schrödinger Equation](https://en.wikipedia.org/wiki/Nonlinear_Schrödinger_equation).\n",
+    "This notebook shows a simple, scalar implementation of the finite difference <a href=\"1\">[1]</a> for solving the Nonlinear Schrödinger Equation <a href=\"2\">[2]</a>.\n",
     "\n",
     "$\\frac{\\partial A}{\\partial z}=-\\frac{\\alpha}{2}A+i \\frac{\\beta_2}{2} \\frac{\\partial^2 A}{\\partial t^2}-i \\gamma(|A|^2A)$\n",
     "\n",
-    "This nonlinear partial differential equation models how the envelope and phase of light pulse changes when propagating through a single mode optical fiber, when taking power attenuation ($\\alpha$), group velocity dispersion ($\\beta_2$)and waveguide nonlinearity ($\\gamma$) causing self-phase modulation (SPM) into account. A is the slowly varying amplitude of the pulse envelope and t is measured in a frame of reference moving with the pulse at the group velocity $v_g$. The nonlinear Schrödinger equation (for optics) can be derived from the wave equation. However we can choose between two (Fourier transform) notations. The derivation with the negative one can be found in Ursula Keller's [book](https://link.springer.com/book/10.1007/978-3-030-82532-4). I used this, because the scipy library uses the negative convention for the DFT. Depending on the initial width $T_0$ and the peak power $P_0$ of the incident pulse, either dispersive or non linear\n",
+    "This nonlinear partial differential equation models how the envelope and phase of light pulse changes when propagating through a single mode optical fiber, when taking power attenuation ($\\alpha$), group velocity dispersion ($\\beta_2$)and waveguide nonlinearity ($\\gamma$) causing self-phase modulation (SPM) into account. A is the slowly varying amplitude of the pulse envelope and t is measured in a frame of reference moving with the pulse at the group velocity $v_g$. The nonlinear Schrödinger equation (for optics) can be derived from the wave equation. However we can choose between two (Fourier transform) notations. The derivation with the negative one can be found in Ursula Keller's book <a href=\"1\">[3]</a>. I used this, because the scipy library uses the negative convention for the DFT. Depending on the initial width $T_0$ and the peak power $P_0$ of the incident pulse, either dispersive or non linear\n",
     "effects may dominate along the fiber. It is useful to introduce two length scales, known as the dispersion length $L_D$ and the nonlinear length $L_{NL}$. Let us consider a time scale normalized to the input width $T_0$ as:\n",
     "\n",
     "$\\tau=\\frac{t}{T_0}$\n",
@@ -38,7 +38,20 @@
     "\n",
     "$L_{NL}=\\frac{1}{\\gamma_0 P_0}$\n",
     "\n",
-    "The concept behind this normalization process is to exclude any kind of overflow error that may occur during solving the PDE with finite difference method. The derivation of the dimensionless transformation for the nonlinear Schrödinger equation can be found [here](https://arxiv.org/pdf/1612.00358). The plotting functions originally came from [here](https://github.com/OleKrarup123/NLSE-vector-solver). The 3-Stage Explicit Fractional Order Runge-Kutta Method algorithm in Mathematica can be found [here](https://www.mdpi.com/2504-3110/7/3/245)."
+    "The concept behind this normalization process is to exclude any kind of overflow error that may occur during solving the PDE with finite difference method. The derivation of the dimensionless transformation for the nonlinear Schrödinger equation can be found here <a href=\"4\">[4]</a>. The plotting functions originally came from here <a href=\"5\">[5]</a>. The 3-Stage Explicit Fractional Order Runge-Kutta Method algorithm in Mathematica can be found here <a href=\"6\">[6]</a>.\n",
+    "\n",
+    "## Possible drawback of this implementation\n",
+    "\n",
+    " I did some observations when I ran the code with different conditions. The time grid is fine enough, when $N \\ge 2^{12}$. When the N variable is below $2^{13}$, this works perfectly with the RK4 or Euler integrators. When the N variable is below $2^{7}$, the fractional integrator works perfectly.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "<div id=\"1\">[1] Wikimedia Foundation. (2024, November 28). Finite difference method. Wikipedia. https://en.wikipedia.org/wiki Finite_difference_method</div>\n",
+    "<div id=\"2\">[2] Wikimedia Foundation. (2024, November 21). Nonlinear Schrödinger equation. Wikipedia. https://en.wikipedia.org/wiki/Nonlinear_Schr%C3%B6dinger_equation</div>\n",
+    "<div id=\"3\">[3] Keller, U. (2023). Ultrafast lasers: A comprehensive introduction to fundamental principles with practical applications. Springer International Publishing.</div>\n",
+    "<div id=\"4\">[4] Felice, D. (2016, December 1). A Study of a Nonlinear Schrödinger Equation for Optical Fibers. arxiv. https://arxiv.org/pdf/1612.00358</div>\n",
+    "<div id=\"5\">[5] Krarup, O. (n.d.). OLEKRARUP123/NLSE-vector-solver: Code for modelling the nonlinear Schrödinger equation for optical fiber pulse propagation. GitHub. https://github.com/OleKrarup123/NLSE-vector-solver</div>\n",
+    "<div id=\"6\">[6] Ghoreishi, F., Ghaffari, R., & Saad, N. (2023). Fractional order Runge–Kutta methods. Fractal and Fractional, 7(3), 245. https://doi.org/10.3390/fractalfract7030245</div>\n"
    ]
   },
   {
