--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "$L_{NL}=\\frac{1}{\\gamma_0 P_0}$\n",
     "\n",
-    "The concept behind this normalization process is to exclude any kind of overflow error that may occur during solving the PDE with finite difference method. The derivation of the dimensionless transformation for the nonlinear Schrödinger equation can be found here <a href=\"#4\">[4]</a>. The plotting functions originally came from here <a href=\"#5\">[5]</a>. The 3-Stage Explicit Fractional Order Runge-Kutta Method algorithm in Mathematica can be found here <a href=\"#6\">[6]</a>.\n",
+    "The concept behind this normalization process is to exclude any kind of overflow error that may occur during solving the PDE with finite difference method. The derivation of the dimensionless transformation for the nonlinear Schrödinger equation can be found here <a href=\"#4\">[4]</a>. The plotting functions originally came from here <a href=\"#5\">[5]</a>.\n",
     "\n",
     "## Possible drawback of this implementation\n",
     "\n",
@@ -50,8 +50,7 @@
     "<div id=\"2\">[2] Wikimedia Foundation. (2024, November 21). Nonlinear Schrödinger equation. Wikipedia. https://en.wikipedia.org/wiki/Nonlinear_Schr%C3%B6dinger_equation</div>\n",
     "<div id=\"3\">[3] Keller, U. (2023). Ultrafast lasers: A comprehensive introduction to fundamental principles with practical applications. Springer International Publishing.</div>\n",
     "<div id=\"4\">[4] Felice, D. (2016, December 1). A Study of a Nonlinear Schrödinger Equation for Optical Fibers. arxiv. https://arxiv.org/pdf/1612.00358</div>\n",
-    "<div id=\"5\">[5] Krarup, O. (n.d.). OLEKRARUP123/NLSE-vector-solver: Code for modelling the nonlinear Schrödinger equation for optical fiber pulse propagation. GitHub. https://github.com/OleKrarup123/NLSE-vector-solver</div>\n",
-    "<div id=\"6\">[6] Ghoreishi, F., Ghaffari, R., & Saad, N. (2023). Fractional order Runge–Kutta methods. Fractal and Fractional, 7(3), 245. https://doi.org/10.3390/fractalfract7030245</div>\n"
+    "<div id=\"5\">[5] Krarup, O. (n.d.). OLEKRARUP123/NLSE-vector-solver: Code for modelling the nonlinear Schrödinger equation for optical fiber pulse propagation. GitHub. https://github.com/OleKrarup123/NLSE-vector-solver</div>"
    ]
   },
   {
